--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Content container -->
         <div
-            class="relative w-full max-w-7xl mx-auto pb-10 sm:pb-12 md:pb-16 lg:pb-20 xl:pb-24 flex flex-col gap-3 sm:gap-4 md:gap-6 lg:gap-8 z-50 px-4 sm:px-6 lg:px-7">
+            class="relative w-full max-w-7xl mx-auto  flex flex-col gap-3 sm:gap-4 md:gap-6 lg:gap-8 z-50 px-4 sm:px-6 lg:px-7">
 
             <!-- Text content -->
             <div class="space-y-2 sm:space-y-3 md:space-y-4 lg:space-y-6">
