--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI Benavente is a Filipino photographer capturing street, documentary, and travel stories across the Philippines.">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="description"
+        content="AI Benavente is a Filipino photographer capturing street, documentary, and travel stories across the Philippines.">
     <title>AI Benavente | Filipino Photographer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link href="src/output.css" rel="stylesheet">
@@ -19,16 +21,15 @@
     </span>
 
 
-    <!-- Floating Dark Mode Button -->
     <button id="themeToggle"
-        class="fixed bottom-6 right-6 bg-gray-100 border border-gray-300 cursor-pointer dark:bg-gray-700 text-gray-700 dark:text-white p-2 rounded-full shadow-sm hover:scale-105 transition-transform ">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+        class="fixed bottom-6 right-6 bg-gray-100 border border-gray-300 dark:border-gray-900 cursor-pointer dark:bg-gray-800 text-gray-700 dark:text-white p-2 rounded-full shadow-lg hover:scale-105 transition-transform">
+        <!-- Sun icon (shown in light mode) -->
+        <svg id="sunIcon" class="size-6" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
-                d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z"
-                clip-rule="evenodd" />
+                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                clip-rule="evenodd"></path>
         </svg>
-
-
     </button>
 
 
@@ -47,7 +48,7 @@
             class="relative w-full max-w-7xl mx-auto  flex flex-col gap-3 sm:gap-4 md:gap-6 lg:gap-8 z-50 px-4 sm:px-6 lg:px-7">
 
             <!-- Text content -->
-            <div class="space-y-2 sm:space-y-3 md:space-y-4 lg:space-y-6">
+            <div class="space-y-2">
                 <!-- Main title - Responsive font sizes -->
                 <h1 class="text-3xl font-bold text-white 
                       sm:text-4xl 
@@ -58,40 +59,44 @@
                     AI Benavente
                 </h1>
 
-                <!-- Subtitle - Responsive font sizes -->
-                <p class="text-lg text-white mb-2
+                <div>
+                    <p class="text-lg text-white 
                      sm:text-xl 
                      md:text-2xl 
                      lg:text-3xl 
                      xl:text-3xl">
-                    Photographer
-                </p>
+                        Photographer
+                    </p>
 
-                <!-- Description - Responsive font sizes and max-width -->
-                <p class="text-sm font-light text-white 
+                    <!-- Description - Responsive font sizes and max-width -->
+                    <p class="text-sm font-light text-white pb-4 md:pb-1
                      sm:text-base 
                      md:text-lg 
                      lg:text-xl 
                      xl:text-lg 
-                     max-w-full 
-                     sm:max-w-125 
-                     md:max-w-150 
-                     lg:max-w-175 
+                     max-w-100
+                     sm:max-w-20
+                     md:max-w-20 
+                     lg:max-w-20
                      xl:max-w-200 
                      2xl:max-w-225">
-                    Every street, every smile, every fleeting moment tells a story—your lens is the voice it needs.
-                </p>
-                <div class="flex text-white gap-4 flex-wrap leading-2 pt-2">
-                    <p>#PhilippinePhotography</p>
-                    <p>#FilipinoPhotographer</p>
-                    <p>#PhilippineStories</p>
+                        Every street, every smile, every fleeting moment tells a story—your lens is the voice it needs.
+                    </p>
+                </div>
+
+                <div class="">
+                    <div class="flex flex-wrap text-white gap-4 leading-2">
+                        <p>#PhilippinePhotography</p>
+                        <p>#FilipinoPhotographer</p>
+                        <p>#PhilippineStories</p>
+                    </div>
+
                 </div>
 
             </div>
 
             <!-- Buttons and social links -->
-            <div
-                class="flex flex-col sm:flex-row items-start sm:items-center gap-4 sm:gap-6 md:gap-8 lg:gap-10 mt-2 sm:mt-4 md:mt-6">
+            <div class="flex flex-wrap items-center gap-4 sm:gap-6 md:gap-8 lg:gap-10 pt-4 md:pt-0 ">
 
                 <!-- Buttons container -->
                 <div class="flex flex-wrap items-center gap-3 sm:gap-4 md:gap-5">
@@ -173,52 +178,66 @@
         </div>
     </section>
 
-
-
-    <section id="section3"
+    <section id="section6"
         class="w-full flex flex-col bg-white dark:bg-gray-900 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
-        <h1
-            class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white transition-colors duration-500 flex justify-center items-center gap-3 flex-col md:items-start">
-            Development <br />
-            <span class="italic font-light text-lg leading-tight block text-center md:text-left">
-                “The world changes every day. Your camera is your diary—capture it, share it, remember it.”
-            </span>
-        </h1>
 
 
-        <div id="gallery-development" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4"></div>
+        <section id="section3" class="w-full flex flex-col transition-colors duration-500 px-6 md:px-20">
+            <h1
+                class=" text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white transition-colors duration-500 flex justify-center items-center gap-3 flex-col md:items-start">
+                Development <br />
+                <span class="italic font-light text-lg leading-tight block text-center md:text-left">
+                    “The world changes every day. Your camera is your diary—capture it, share it, remember it.”
+                </span>
+            </h1>
+
+
+            <div id="gallery-development" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4">
+            </div>
+        </section>
     </section>
 
-    <section id="section4"
-        class="w-full flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20 text-center md:text-left">
-        <!-- Section Title -->
-        <h1 class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white transition-colors duration-500">
-            Documentary<br />
-            <span class="italic font-light text-base pt-3 md:text-lg leading-tight block ">
-                “Keep shooting. Someone, somewhere, needs your perspective to see the world differently.”
-            </span>
-        </h1>
+    <section id="section6"
+        class="w-full flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 py-20">
+        <section id="section4"
+            class="w-full flex flex-col transition-colors duration-500 px-6 md:px-20  text-center md:text-left">
+            <!-- Section Title -->
+            <h1
+                class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white transition-colors duration-500">
+                Documentary<br />
+                <span class="italic font-light text-base pt-3 md:text-lg leading-tight block ">
+                    “Keep shooting. Someone, somewhere, needs your perspective to see the world differently.”
+                </span>
+            </h1>
 
-        <!-- Images Container (empty, will be populated by JS) -->
-        <div id="gallery-documentary" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4"></div>
+            <!-- Images Container (empty, will be populated by JS) -->
+            <div id="gallery-documentary" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4">
+            </div>
 
+        </section>
     </section>
 
 
-    <section id="section5"
-        class="w-full flex flex-col bg-white dark:bg-gray-900 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20 text-center md:text-left">
-        <h1 class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white">Portrait<br />
-            <span class="italic font-light text-lg leading-tight block pt-3 md:pt-3">
-                “The best shot isn’t always the one you planned—it’s the one that moves someone, even for a second.”
-            </span>
-        </h1>
-        <div id="gallery-portrait" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4"></div>
+
+    <section id="section6"
+        class="w-full flex flex-col bg-white dark:bg-gray-900  transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
+
+        <section id="section5"
+            class="w-full flex flex-col  transition-colors duration-500 px-6 md:px-20  text-center md:text-left">
+            <h1 class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white">Portrait<br />
+                <span class="italic font-light text-lg leading-tight block pt-3 md:pt-3">
+                    “The best shot isn’t always the one you planned—it’s the one that moves someone, even for a second.”
+                </span>
+            </h1>
+            <div id="gallery-portrait" class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4"></div>
+        </section>
+
     </section>
 
     <section id="section6"
         class="w-full flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
 
-        <section id="gallery" class="w-full px-6 md:px-20 py-20 text-center md:text-left">
+        <section id="gallery" class="w-full px-6 md:px-20 text-center md:text-left">
             <h1 class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white">Travel<br />
                 <span class="italic font-light text-lg leading-tight block pt-4 md:pt-3">
                     “Every street, every smile, every fleeting moment tells a story—your lens is the voice it needs.”
