--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <footer
         class="dark:bg-gray-900 w-full bg-white  dark:text-white text-black p-4 font-light flex flex-col justify-center items-center">
-        <h1 class="font-medium">Al Benavente | Photographer | 09-2025</h1>
+        <h1 class="font-medium">Al Benavente | Photographer | <span id="date"></span></h1>
         <h1 class="py-2 text-xs text-center">“Famous photographers are remembered not just for images, but for the
             courage to keep seeing and capturing what others overlook.”</h1>
         <h1 class="text-xs leading-1">alBenavente.creative@gmail.com</h1>
@@ -276,6 +276,7 @@
     </footer>
 
     <script src="wallpaperanimation.js"></script>
+    <script src="date.js"></script>
     <script src="gallery.js"></script>
     <script src="themeContext.js"></script>
     <script src="typewriter.js"></script>
