--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <footer
         class="dark:bg-gray-900 w-full bg-white  dark:text-white text-black p-4 font-light flex flex-col justify-center items-center">
-        <h1 class="font-medium">Al Benavente | Photographer | <span>Copyright &copy; <span id="year"></span> </span></h1>
+        <h1 class="font-medium text-center">Al Benavente | Photographer | <span>Copyright &copy; <span id="year"></span> </span></h1>
         <h1 class="py-2 text-xs text-center">“Famous photographers are remembered not just for images, but for the
             courage to keep seeing and capturing what others overlook.”</h1>
         <h1 class="text-xs leading-1">alBenavente.creative@gmail.com</h1>
