--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="images/dslr-camera.ico">
     <meta name="description"
         content="AI Benavente is a Filipino photographer capturing street, documentary, and travel stories across the Philippines.">
     <title>AI Benavente | Filipino Photographer</title>
@@ -22,7 +22,7 @@
 
 
     <button id="themeToggle"
-        class="fixed bottom-6 right-6 bg-gray-100 border border-gray-300 dark:border-gray-900 cursor-pointer dark:bg-gray-800 text-gray-700 dark:text-white p-2 rounded-full shadow-lg hover:scale-105 transition-transform">
+        class="fixed bottom-6 z-50 right-6 bg-gray-100 border border-gray-300 dark:border-gray-900 cursor-pointer dark:bg-gray-800 text-gray-700 dark:text-white p-2 rounded-full shadow-lg hover:scale-105 transition-transform">
         <!-- Sun icon (shown in light mode) -->
         <svg id="sunIcon" class="size-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -137,7 +137,7 @@
 
 
     <section id="section2"
-        class=" w-full flex items-center bg-gray-900 dark:bg-black transition-colors duration-500 px-6 md:px-20 py-[10vh]"
+        class=" w-full flex items-center  bg-gray-900 dark:bg-black transition-colors duration-500 px-6 md:px-20 py-[10vh]"
         style="
         background-image: url('images/bgpat2.png'); 
         box-shadow: 0 10px 15px rgba(0,0,0,0.6); 
@@ -147,16 +147,19 @@
         <div class="flex flex-col md:flex-row items-center gap-12 md:gap-16 w-full max-w-7xl mx-auto">
             <!-- Image Column -->
             <div class="flex justify-center items-center md:w-1/2">
-                <div class="overflow-hidden shadow-lg rounded-2xl w-full max-w-100 aspect-4/5">
-                    <img src="images/ai.png" alt="Julius" class="w-full h-full object-cover">
+                <div
+                    class="overflow-hidden shadow-lg rounded-2xl w-full max-w-100 aspect-4/5 slide-from-left opacity-0">
+                    <img src="images/ai.png" alt="Al Benavente" class="w-full h-full object-cover">
                 </div>
             </div>
 
+
             <!-- Text Column -->
-            <div class="flex flex-col md:w-1/2">
-                <h1 class="text-white text-4xl md:text-5xl font-bold pb-2">Hi, it's AI</h1>
-                <h1 id="typewriter" class="text-white text-lg md:text-3xl font-medium pb-6"></h1>
-                <p class="text-gray-300 text-justify md:text-base leading-relaxed max-w-125 pb-6">
+            <div class="flex flex-col md:w-1/2 justify-center items-center md:items-start">
+                <h1 class="text-white text-4xl md:text-5xl font-bold pb-2 text-center md:text-left">Hi, it's AI</h1>
+                <h1 id="typewriter" class="text-white text-lg md:text-3xl text-center md:text-left font-medium pb-6">
+                </h1>
+                <p class="text-gray-300 text-center md:text-justify  leading-relaxed max-w-125 pb-6">
                     After 20 years, I've learned that great photography is a balance of technical skill and human
                     intuition.
                     I partner with clients to tell authentic stories, using light and composition to move beyond the
@@ -183,7 +186,11 @@
         </div>
     </section>
 
-    <section id="section6"
+    <section id="section3" style="
+        
+        box-shadow: 0 10px 15px rgba(0,0,0,0.2); 
+        position: relative; 
+        z-index: 5;"
         class="w-full flex flex-col bg-white dark:bg-gray-900 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
 
 
@@ -202,8 +209,9 @@
         </section>
     </section>
 
-    <section id="section6"
-        class="w-full flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 py-20">
+    <section id="section4"
+        class="w-full flex flex-col bg-switch bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 py-20"
+        style="background-image: url('images/bgpat3.png');">
         <section id="section4"
             class="w-full flex flex-col transition-colors duration-500 px-6 md:px-20  text-center md:text-left">
             <!-- Section Title -->
@@ -224,8 +232,13 @@
 
 
 
-    <section id="section6"
-        class="w-full flex flex-col bg-white dark:bg-gray-900  transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
+    <section id="section5" style="
+  box-shadow: 
+    0 10px 15px rgba(0,0,0,0.2),   /* bottom */
+    0 -10px 15px rgba(0,0,0,0.2); /* top */
+  position: relative; 
+  z-index: 5;
+" class="w-full flex flex-col bg-white dark:bg-gray-900  transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
 
         <section id="section5"
             class="w-full flex flex-col  transition-colors duration-500 px-6 md:px-20  text-center md:text-left">
@@ -240,7 +253,7 @@
     </section>
 
     <section id="section6"
-        class="w-full flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
+        class="w-full bg-switch flex flex-col bg-gray-100 dark:bg-gray-800 transition-colors duration-500 px-6 md:px-20 min-h-screen py-20">
 
         <section id="gallery" class="w-full px-6 md:px-20 text-center md:text-left">
             <h1 class="text-3xl md:text-4xl font-bold mb-12 text-gray-900 dark:text-white">Travel<br />
@@ -253,8 +266,12 @@
 
     </section>
 
-    <footer
-        class="dark:bg-gray-900 w-full bg-white  dark:text-white text-black p-4 font-light flex flex-col justify-center items-center">
+    <footer style="
+  box-shadow: 
+    0 -10px 15px rgba(0,0,0,0.2); /* top */
+  position: relative; 
+  z-index: 5;
+" class="dark:bg-gray-900 w-full bg-white  dark:text-white text-black p-4 font-light flex flex-col justify-center items-center">
         <h1 class="font-medium text-center">Al Benavente | Photographer</h1>
 
         <div class="flex flex-col items-center justify-center py-2">
@@ -292,7 +309,8 @@
 
 
     </footer>
-
+    <script src="pictureprofile.js"></script>
+    <script src="pattern.js"></script>
     <script src="wallpaperanimation.js"></script>
     <script src="date.js"></script>
     <script src="gallery.js"></script>
