--- a/index.html
+++ b/index.html
@@ -100,12 +100,18 @@
                 <!-- Buttons container -->
                 <div class="flex flex-wrap items-center gap-3 sm:gap-4 md:gap-5">
                     <!-- Book a Call Button -->
-                    <button class="bg-transparent font-semibold rounded-full border-2 border-white text-white 
+                    <a href="#section2" class="cursor-pointer bg-transparent flex gap-3 items-center font-semibold rounded-full border-2 border-white text-white 
                               text-sm sm:text-base md:text-lg lg:text-xl xl:text-lg
                               px-4 py-1.5 sm:px-5 sm:py-2 md:px-6 md:py-2 lg:px-8 lg:py-2
                               hover:bg-white/10 hover:scale-105 active:scale-95 transition-all duration-200">
-                        Book a Call
-                    </button>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                        </svg>
+                        About
+                    </a>
 
                     <!-- Theme Toggle Button -->
 
@@ -137,7 +143,7 @@
 
 
     <section id="section2"
-        class=" w-full flex items-center  bg-gray-900 dark:bg-black transition-colors duration-500 px-6 md:px-20 py-[10vh]"
+        class=" w-full flex items-center min-h-screen bg-gray-900 dark:bg-black transition-colors duration-500 px-6 md:px-20 py-[10vh]"
         style="
         background-image: url('images/bgpat2.png'); 
         box-shadow: 0 10px 15px rgba(0,0,0,0.6); 
