--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
 <body>
 
 
-    <span
-        class="text-white text-center font-medium text-xs md:text-sm px-4 py-2 rounded-full bg-black/50 backdrop-blur-xs fixed top-4 left-1/2 -translate-x-1/2 z-50">
-        Demonstration Only
-    </span>
-
 
     <button id="themeToggle"
         class="fixed bottom-6 z-50 right-6 bg-gray-100 border border-gray-300 dark:border-gray-900 cursor-pointer dark:bg-gray-800 text-gray-700 dark:text-white p-2 rounded-full shadow-lg hover:scale-105 transition-transform">
@@ -155,7 +150,7 @@
             <div class="flex justify-center items-center md:w-1/2">
                 <div
                     class="overflow-hidden shadow-lg rounded-2xl w-full max-w-100 aspect-4/5 slide-from-left opacity-0">
-                    <img src="images/ai.png" alt="Al Benavente" class="w-full h-full object-cover">
+                    <img src="images/street/watermarked/7.jpg" alt="Al Benavente" class="w-full h-full object-cover">
                 </div>
             </div>
 
